--- a/Docs/Documento Final Tesis/includes/portada.tex
+++ b/Docs/Documento Final Tesis/includes/portada.tex
@@ -20,14 +20,14 @@
 \vspace{42 pt}
 
 \Huge
-\textbf{'a'e'i'o'u'A'E'I'O'U'n'N"u"U}\\
+\textbf{Bug Manager: Introduciendo Calidad a las Organizaciones de Software}\\
 \vspace{65 pt}
 
 \Large
 \begin{flushleft}
 \hspace{5pt}\textbf{AUTOR: \hspace{28pt}Marco Antonio Rangel Bocardo}\\
 \vspace{5pt}
-\hspace{5pt}\textbf{ASESORES:} Dr. 'Oscar Mondrag'on\\
+\hspace{5pt}\textbf{DIRECTOR DE TESIS:} Dr. 'Oscar Mondrag'on\\
 \end{flushleft}
 
 \large
