--- a/Docs/Documento Final Tesis/tesis.tex
+++ b/Docs/Documento Final Tesis/tesis.tex
@@ -27,6 +27,7 @@
 	\include{includes/capitulo01}
 	\include{includes/capitulo02}
 	\include{includes/capitulo03}
+	\include{includes/capitulo04}
 
 	\include{includes/bibliografia}
 
